[project]
name = "pep-connections"
version = "0.0.1"
dependencies = [
    "rich>=13.6.0",
    "rst-to-myst[sphinx]>=0.4.0",
    "tqdm>=4.66.4",
]

######################
# Tool configuration #
######################

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "rst_to_myst.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
]
norecursedirs = [
    ".tox",
    ".venv",
]
addopts = ["-ra", "--cov", "-q", "--strict-markers"]
xfail_strict = true

[tool.coverage.run]
source = ["."]
branch = true

[tool.coverage.report]
fail_under = 43.00
precision = 2
show_missing = true
skip_covered = true
skip_empty = true

[tool.tox]
envlist = ["py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
skipsdist = true
deps = [
    "pytest",
    "pytest-cov",
    "pytest-randomly",
]
commands = [
    ["pytest", { replace = "posargs", default = [], extend = true }],
]

[tool.tox.env.typecheck]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "mypy",
    "types-tqdm",
]
passenv = ["TERM"]
commands = [
    ["mypy", { replace = "posargs", default = ["."], extend = true }],
]

[tool.tox.env.format]
skip_install = true
deps = [
    "black",
]
commands = [
    ["black", { replace = "posargs", default = ["--check", "--diff", "--color", "."], extend = true }],
]

[tool.tox.env.lint]
deps = [
    "ruff",
]
commands = [
    ["ruff", { replace = "posargs", default = ["check", "--diff", "."], extend = true }],
]
